wdl-analysis/tests/validation/missing-call-input/source.errors
error: unknown task or workflow `foo`
  ┌─ tests/validation/missing-call-input/source.wdl:7:10
  │
7 │     call foo { foo = bar }
  │          ^^^

error: unknown name `bar`
  ┌─ tests/validation/missing-call-input/source.wdl:7:22
  │
7 │     call foo { foo = bar }
  │                      ^^^

